# Chessica

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  board.py  cache.py  config.py  database.py  engine.py  mail.py  main.py  migrations.py  models.py  openings.py  opponent_model.py  realtime.py  schemas.py  search.py  store.py  streaming.py  telemetry.py  worker.py
backend/app/api/: __init__.py  analysis.py  analytics.py  auth.py  multiplayer.py  sessions.py  stream.py  users.py
backend/tests/: test_engine_helpers.py  test_exploit.py
frontend/: app.js  auth.html  auth.js  computer.html  index.html  online.html  online.js  package-lock.json  package.json  replay.html  replay.js  styles.css  temp_styles.css
frontend/src/: App.jsx  auth.css  board-perf.css  main.jsx  styles.css
frontend/src/components/: LogoMark.jsx  NavBar.jsx  TutorialModal.css  TutorialModal.jsx
frontend/src/lib/: api.js  auth.js  config.js  difficulties.js  format.js  settings.jsx
frontend/src/pages/: AnalyticsPage.jsx  AuthPage.jsx  ComputerPage.jsx  HomePage.jsx  MultiplayerPage.jsx  ReplayPage.jsx  SettingsPage.css  SettingsPage.jsx
